tests/export_default/export_default.exp
Error ------------------------------------------------------------------------------------------------------ test.js:3:7

Cannot assign `M(...)` to `N.x` because string [1] is incompatible with number [2].

   test.js:3:7
   3| N.x = M(N.x);
            ^^^^^^

References:
   lib/lib.js:2:44
   2|     declare module.exports: (x: string) => string;
                                                 ^^^^^^ [1]
   lib/lib.js:5:20
   5|     declare var x: number;
                         ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:3:9

Cannot call `M` with `N.x` bound to `x` because number [1] is incompatible with string [2].

   test.js:3:9
   3| N.x = M(N.x);
              ^^^

References:
   lib/lib.js:5:20
   5|     declare var x: number;
                         ^^^^^^ [1]
   lib/lib.js:2:33
   2|     declare module.exports: (x: string) => string;
                                      ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:5:7

Cannot assign `P(...)` to `N.y` because string [1] is incompatible with number [2].

   test.js:5:7
   5| N.y = P(N.y);
            ^^^^^^

References:
   lib/lib.js:2:44
   2|     declare module.exports: (x: string) => string;
                                                 ^^^^^^ [1]
   lib/lib.js:6:20
   6|     declare var y: number;
                         ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:5:9

Cannot call `P` with `N.y` bound to `x` because number [1] is incompatible with string [2].

   test.js:5:9
   5| N.y = P(N.y);
              ^^^

References:
   lib/lib.js:6:20
   6|     declare var y: number;
                         ^^^^^^ [1]
   lib/lib.js:2:33
   2|     declare module.exports: (x: string) => string;
                                      ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:7:7

Cannot assign `Q(...)` to `N.z` because string [1] is incompatible with number [2].

   test.js:7:7
   7| N.z = Q(N.z);
            ^^^^^^

References:
   lib/lib.js:2:44
   2|     declare module.exports: (x: string) => string;
                                                 ^^^^^^ [1]
   lib/lib.js:7:20
   7|     declare var z: number;
                         ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:7:9

Cannot call `Q` with `N.z` bound to `x` because number [1] is incompatible with string [2].

   test.js:7:9
   7| N.z = Q(N.z);
              ^^^

References:
   lib/lib.js:7:20
   7|     declare var z: number;
                         ^^^^^^ [1]
   lib/lib.js:2:33
   2|     declare module.exports: (x: string) => string;
                                      ^^^^^^ [2]



Found 6 errors
